--- a/public/assets/css/frontend.css
+++ b/public/assets/css/frontend.css
@@ -72,8 +72,6 @@ body {
     padding-left: 0;
 }
 
-.product__category__list li::before {
-}
 
 .product__category__list li a {
     text-decoration: none;
@@ -83,7 +81,7 @@ body {
 }
 
 .product__category__list li a::before {
-    color: / rgb(153, 153, 153);
+    color: rgb(153, 153, 153);
     content: "❖";
     margin-right: 10px;
 }
@@ -271,3 +269,49 @@ body {
     margin: 5px 2px;
 }
 /* End of single Product */
+@media(min-width: 767px){
+    .popup-gallery.front-page{
+        grid-template-rows: 0.5fr 0.5fr;
+    }
+    .popup-gallery.front-page > :nth-child(2){
+      grid-column: span 2;
+      grid-row: span 2;
+    }
+}
+.popup-gallery.front-page > a{
+    position: relative;
+    overflow: hidden;
+}
+.popup-gallery.front-page > a img{
+    width: 100%;
+    height: auto;
+    object-fit: cover;
+}
+.popup-gallery.front-page > :nth-child(2){
+  transform: scale(1, 1.08);
+  -webkit-transform: scale(1, 1.08);
+  -moz-transform: scale(1, 1.08);
+  -ms-transform: scale(1, 1.08);
+  -o-transform: scale(1, 1.08);
+}
+.popup-gallery.front-page > a .img-shadow{
+    position: absolute;
+    content: "";
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.3);
+    top: 0;
+    left: 0;
+    transition: 0.5s ease;
+    -webkit-transition: 0.5s ease;
+    -moz-transition: 0.5s ease;
+    -ms-transition: 0.5s ease;
+    -o-transition: 0.5s ease;
+}
+.popup-gallery.front-page > a:hover .img-shadow{
+    transform: translateX(120%) rotate(60deg);
+    -webkit-transform: translateX(120%) rotate(60deg);
+    -moz-transform: translateX(120%) rotate(60deg);
+    -ms-transform: translateX(120%) rotate(60deg);
+    -o-transform: translateX(120%) rotate(60deg);
+}
